# LicenseMatrix

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md
DOCS/licensematrix/: index.md  license_matrix.md  license_type.md
documentation/reference/: MODULES.md  README.md
documentation/reference/licensematrix/: index.md  license_matrix.md  license_type.md
licensematrix/: __init__.py  json.py  license_matrix.json  license_matrix.py  license_type.py  lm_schema.json  schema.json
licensematrix/dev/: embarkStudios.rb  license_matrix.json  licenselist.txt  notes.txt  pypi_classifiers.json  pypiclassifiers.txt  spdx.json  update_matrix.py  update_pypiclassifiers.py
readme-assets/icons/: LicenseMatrix.xcf
