[tool.poetry]
name = "licensematrix"
version = "2021.1.2"
description = "List of popular open source licenses with naive functions to determine compatibility and search for a license from a string"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/LicenseMatrix"
repository = "https://github.com/FHPythonUtils/LicenseMatrix"
documentation = "https://github.com/FHPythonUtils/LicenseMatrix/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Pylint
[tool.pylint.basic]
argument-naming-style ="camelCase"
attr-naming-style ="camelCase"
function-naming-style ="camelCase"
method-naming-style ="camelCase"
variable-naming-style ="camelCase"

[tool.pylint.format]
indent-string ="\t"

[tool.pylint.master]
ignore-patterns ="test_.*?py"

[tool.pylint.messages_control]
enable = [
	'F',  # Fatal
	'E',  # Error
	'W',  # Warning
	'R',  # Refactor
	'C',  # Convention
]
disable=[
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation",
	"wrong-import-position",
	"unsubscriptable-object",
	"no-absolute-import",
]
